[tool.poetry]
name = "qcs-api-client"
version = "0.21.1"
description = "A client library for accessing the Rigetti QCS API"
license = "Apache-2.0"
repository = "https://github.com/rigetti/qcs-api-client-python"
documentation = "https://qcs-api-client-python.readthedocs.io/en/latest/index.html"

authors = []

readme = "README.md"
packages = [
    {include = "qcs_api_client"},
]
include = ["CHANGELOG.md", "qcs_api_client/py.typed"]


[tool.poetry.dependencies]
attrs = "^20.1.0"
httpx = "^0.15.0"
iso8601 = "^1.0.2"
pydantic = "^1.7.2"
python = "^3.7"
python-dateutil = "^2.8.1"
retrying = "^1.3.3"
rfc3339 = "^6.2"
toml = "^0.10.2"
PyJWT = "^2.4.0"


[tool.poetry.dev-dependencies]
black = "20.8b1"
flake8 = "^3.8.4"
pytest = "^6.1.2"
respx = "^0.15.1"
pytest-asyncio = "^0.14.0"


[tool.black]
line-length = 120
target_version = ['py37', 'py38']
exclude = '''
(
  /(
    | \.git
    | \.venv
    | \.mypy_cache
  )/
)
'''

[tool.isort]
line_length = 120
multi_line_output = 3
include_trailing_comma = true

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
