[tool.poetry]
name = "qcs-api-client"
version = "0.25.0"
description = "A client library for accessing the Rigetti QCS API"
license = "Apache-2.0"
repository = "https://github.com/rigetti/qcs-api-client-python"
documentation = "https://qcs-api-client-python.readthedocs.io/en/latest/index.html"

authors = []

readme = "README.md"
packages = [{ include = "qcs_api_client" }]
include = ["CHANGELOG.md", "qcs_api_client/py.typed"]


[tool.poetry.dependencies]
attrs = ">=21.3.0"
httpx = "^0.23.0"
iso8601 = "^1.0.2"
pydantic = "^2.6.3"
python = ">=3.8,<4.0"
python-dateutil = "^2.8.1"
retrying = "^1.3.3"
rfc3339 = "^6.2"
toml = "^0.10.2"
PyJWT = "^2.4.0"
pydantic-settings = "^2.2.1"


[tool.poetry.dev-dependencies]
black = "^24.2.0"
click = "8.0.2"
flake8 = "^3.8.4"
pytest = "^6.1.2"
respx = "^0.20.0"
pytest-asyncio = "^0.14.0"


[tool.black]
line-length = 120
target_version = ['py37', 'py38']
exclude = '''
(
  /(
    | \.git
    | \.venv
    | \.mypy_cache
  )/
)
'''

[tool.isort]
line_length = 120
multi_line_output = 3
include_trailing_comma = true

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
